--- a/Assignment1_Client/Views/Shared/_Layout.cshtml
+++ b/Assignment1_Client/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     String Username = Context.Session.GetString("USERNAME");
+    String Role = Context.Session.GetString("ROLE");
 
 }
 <!DOCTYPE html>
@@ -15,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                @if (Username != null && Username == "admin")
+                @if (Role != null && Role == "Admin")
                 {
                     <a class="navbar-brand" asp-area="" asp-controller="Staffs" asp-action="Index">My Store</a>
                 } else
@@ -31,7 +32,7 @@
 
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        @if (Username == "admin")
+                        @if (Role == "Admin")
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Staffs" asp-action="Index">Manage Staffs</a>
@@ -55,11 +56,8 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="OrderHistory">Order History</a>
                             </li>
                         }
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                     </ul>
-                    @if (Username != null)
+                    @if (Role != null)
                     {
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
