--- a/Assignment1_Client/Views/Staffs/EditProfile.cshtml
+++ b/Assignment1_Client/Views/Staffs/EditProfile.cshtml
@@ -1,4 +1,4 @@
-﻿@model Assignment1_Api.Models.Staff
+﻿@model Assignment1_Client.Models.StaffDTO
 @{
     ViewData["Title"] = "Edit";
 }
@@ -26,9 +26,19 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group mb-2">
+                <label asp-for="OldPassword" class="control-label mb-1">Enter Old Password</label>
+                <input asp-for="OldPassword" type="password" class="form-control" />
+                <span asp-validation-for="OldPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-2">
                 <label asp-for="Password" class="control-label mb-1"></label>
                 <input asp-for="Password" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-2">
+                <label asp-for="RePassword" class="control-label mb-1">Re-enter Password</label>
+                <input asp-for="RePassword" type="password" class="form-control" />
+                <span asp-validation-for="RePassword" class="text-danger"></span>
             </div>
            
             <div class="form-group mb-2">
